--- a/style.css
+++ b/style.css
@@ -42,21 +42,17 @@
 .a {
   color: none;
   text-decoration: none;
-  background-color: transparent;
 }
 
-.a:hover {
-    border-top: 3px solid #0065FC;
-}
-
-a:-webkit-any-link {
-  color: #0065FC;
+.headerHostActButton:-webkit-any-link {
+  color: black;
   cursor: pointer;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
-.headerHostActButton[data-active=true] {
+.headerHostActButton:hover {
   border-top: 2px solid #0065FC;
+  color: #0065FC;
 }
 
 
