--- a/style.css
+++ b/style.css
@@ -13,6 +13,21 @@
     font-family: 'Raleway';
   }
 
+h1
+  {
+      font-size: 30px; 
+  }
+
+h2
+  {
+      font-size: 20px; 
+  }
+
+p
+  {
+  font-size: 15px; 
+  }
+
 .html {
     max-width: 1400px; 
 }
@@ -46,6 +61,8 @@
   color: #0065FC;
 }
 
+
+
 /* Tablettes */
 @media screen and (min-width: 768px) and (max-width: 991px)
 {
@@ -74,4 +91,9 @@
     border-bottom: 2px solid #0065FC;
     border-top: none;
   }    
+
+
 }
+
+
+
