--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     font-family: 'Raleway';
   }
   
-.h1, h2, h3, div, form, p {
+.h1, h2, h3, div, form, nav, p {
     font-family: 'Raleway';
   }
 
@@ -28,70 +28,206 @@ p
   font-size: 15px; 
   }
 
-.html {
+html {
     max-width: 1400px; 
 }
 
-/* HEADER */
-.BookiLogo {
-    grid-area: logo;
-    height: 70px;
+body {
+  margin: 0px; 
 }
-  
-.headerHostAct{
-    grid-area: button;
+
+/* HEADER */
+.bookiLogo {
+    height: 60px;
 }
 
 .header {
-  display: grid;
+  display: flex;
+  justify-content: space-between;
+}
+
+nav {
+  display: flex;
+}
+
+.menuContainer {
+  display: flex;
   align-items: center;
-  grid-template-columns: 1fr 1fr 1fr auto;
-  grid-template-areas: "logo . . button";
+  height: 60px;
+  border-top: 2px solid white;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .headerHostActButton {
-  padding: 20px;
+  height: 20px;
   text-align: center;
   color: black;
   text-decoration: none;
 }
 
-.headerHostActButton:hover {
+.menuContainer:hover {
   border-top: 2px solid #0065FC;
   color: #0065FC;
 }
 
+/* Partie recherche */
+.searchicon {
+  background-color: #F2F2F2;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px 0 0 5px;
+  box-sizing: border-box;
+}
+
+.searchtext {
+  border-right: none;
+  border-left: none;
+  border-top: #F2F2F2 2px solid;
+  border-bottom: #F2F2F2 2px solid;
+  box-sizing: border-box;
+  font-weight: bold;
+  padding: 10px;
+}
+
+.searchbutton {
+  background-color: #0065FC;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 0 5px 5px 0;
+  padding: 10px;
+}
+
+/* Filtre */
+.searchFilters {
+  display: flex;
+  margin-top: 30px;
+  flex-wrap: wrap;
+  font-weight: bold;
+}
+
+.searchFiltersTitle {
+  margin: 0 10px 15px 0;
+  display: flex;
+  align-items: center;
+}
+
+.searchFiltersFilter {
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+  border: 2px solid #d9d9d9;
+  border-radius: 45px;
+  margin-bottom: 15px;
+}
+
+.searchFiltersFilterIcon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #DEEBFF;
+  border-radius: 100%;
+  height: 45px;
+  width: 45px;
+}
+
+.searchFiltersFilterTitle {
+  margin-left: 20px;
+  margin-right: 20px;
+}
 
 
 /* Tablettes */
-@media screen and (min-width: 768px) and (max-width: 991px)
-{
+@media screen and (min-width: 768px) and (max-width: 991px) {
+.header {
+    display: flex;
+    flex-direction: column;
+  } 
     
+.bookiDivLogo {
+      display: flex;
+      justify-content: center;
+  }
+  
+.bookiLogo {
+      height: 60px;
+  }
+  
+.headerHostAct {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+  
+  
+.menuContainer {
+      border-top: none;
+      height: 40px;
+      border-bottom: 2px solid #f2f2f2; 
+      margin-left: 0px;
+      margin-right: 0px;
+      display: flex;
+      flex-grow: 1;
+      justify-content: center;
+      width: 50%;
+  }
+    
+.menuContainer:hover {
+      border-top: none;
+      border-bottom: 2px solid #0065FC;
+      color: #0065FC;
+  }
+  
+.searchFiltersTitle {
+      width: 100%;
+  }    
 }
 
 /* Téléphone */
-@media screen and (max-width: 767px)
-{
-  .header {
+@media screen and (max-width: 767px) {
+.header {
   display: flex;
   flex-direction: column;
+} 
+  
+.bookiDivLogo {
+    display: flex;
+    justify-content: center;
+}
+
+.bookiLogo {
+    height: 50px;
+}
+
+.headerHostAct {
+  display: flex;
   align-items: center;
-  justify-content: space-between;
-  } 
+  justify-content: space-around;
+}
 
-  .BookiLogo {
-    height: 40px;
-  }
 
-  .headerHostActButton {
-    border-bottom: 2px solid #f2f2f2; 
-  }
-
-  .headerHostActButton:hover {
-    border-bottom: 2px solid #0065FC;
+.menuContainer {
     border-top: none;
-  }    
+    height: 40px;
+    border-bottom: 2px solid #f2f2f2; 
+    margin-left: 0px;
+    margin-right: 0px;
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    width: 50%;
+}
+  
+.menuContainer:hover {
+    border-top: none;
+    border-bottom: 2px solid #0065FC;
+    color: #0065FC;
+}
 
+.searchFiltersTitle {
+    width: 100%;
+}
 
 }
 
