--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 
 /* POLICE */
-@font-face {
-    font-family: 'Raleway';
-    src: url(https://fonts.google.com/specimen/Raleway);
-  }
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+* {
+  font-family: 'Raleway', sans-serif;
+}
     
 .maPolice {
     font-family: 'Raleway';
