--- a/style.css
+++ b/style.css
@@ -28,8 +28,12 @@ p
   font-size: 15px; 
   }
 
-html {
-    max-width: 1400px; 
+.corps {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  max-width: 1400px; 
 }
 
 body {
@@ -61,6 +65,7 @@ nav {
 .textInfo{
   margin-left: 15px;
 }
+
 
 .menuContainer {
   display: flex;
@@ -152,7 +157,100 @@ nav {
   margin-right: 20px;
 }
 
+/* Hébergements Grande Partie */
+.hébergements{
+  display: flex;
+  justify-content: space-between;
+}
 
+a{
+  color: black;
+  text-decoration: none;
+}
+
+/* Hébergements */
+.hébergementsPart {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: #F2F2F2;
+  border-radius: 20px;
+  margin: 15px;
+}
+
+.hébergementsHeader{
+  width: 100%;
+  margin-left: 30px;
+}
+
+.hébergementsAfficher{
+  width: 100%;
+  margin-top: 15px;
+  margin-bottom: 30px;
+  margin-left: 30px;
+}
+
+.hébergementsFiche {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 20px;
+  margin: 15px;
+  background-color: white;
+  height: 300px;
+  width: 300px;
+}
+
+.hébergementsFicheExemple {
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+  width: 300px;
+}
+
+.hébergementsFicheExempleImage {
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
+
+/* Populaires */
+.hébergementsPopulaires {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: #F2F2F2;
+  border-radius: 20px;
+  margin: 15px;
+}
+
+.hébergementsPopulairesHeader{
+  display: flex;
+  justify-content: space-between;
+}
+
+.hébergementsPopulairesFiche {
+  display: flex;
+  background-color: white;
+  border-radius: 20px;
+  margin: 10px;
+}
+
+.hébergementsPopulairesFicheContenuImage {
+  height: 200px;
+  width: 350px;
+  max-height: 100%;
+  max-width: 100%;
+}
+
+
+/* Etoile */
+.etoileIcon[data-active=false] {
+  color: #d9d9d9;
+}
+
+.etoileIcon[data-active=true] {
+  color: #0065FC;
+}
 
 
 /* Desktop */
