--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ a{
   background-color: #F2F2F2;
   border-radius: 20px;
   margin: 15px;
+  width: 900px;
 }
 
 .hébergementsHeader{
@@ -191,41 +192,33 @@ a{
 }
 
 .hébergementsFiche {
-  display: flex;
-  justify-content: space-between;
+  object-fit: cover;
   border-radius: 20px;
-  margin: 15px;
   background-color: white;
-  height: 300px;
-  width: 300px;
-}
-
-.hébergementsFicheExemple {
-  display: flex;
-  flex-direction: column;
-  height: 300px;
-  width: 300px;
+  width: 33%;
+  margin: 5px;
 }
 
 .hébergementsFicheExempleImage {
-  object-fit: cover;
   border-radius: 20px 20px 0 0;
+  width: 100%;
 }
 
 /* Populaires */
 .hébergementsPopulaires {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
   background-color: #F2F2F2;
   border-radius: 20px;
   margin: 15px;
+  width: 480px;
 }
 
 .hébergementsPopulairesHeader{
   display: flex;
   justify-content: space-between;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .hébergementsPopulairesFiche {
@@ -236,10 +229,13 @@ a{
 }
 
 .hébergementsPopulairesFicheContenuImage {
-  height: 200px;
-  width: 350px;
-  max-height: 100%;
-  max-width: 100%;
+  border-radius: 20px 0 0 20px;
+  width: 100%;
+  height: 100%;
+}
+
+.hébergementsPopulairesFicheContenuTexte{
+  margin-left: 15px;
 }
 
 
