--- a/style.css
+++ b/style.css
@@ -194,14 +194,15 @@ a{
 .hébergementsFiche {
   border-radius: 20px;
   background-color: white;
-  width: 33%;
   margin: 5px;
+  width: 275px;
 }
 
 .hébergementsFicheExempleImage {
   border-radius: 20px 20px 0 0;
   object-fit: cover;
   width: 100%;
+  height: 150px;
 }
 
 /* Populaires */
@@ -231,7 +232,7 @@ a{
 .hébergementsPopulairesFicheContenuImage {
   object-fit: cover;
   border-radius: 20px 0 0 20px;
-  width: 100%;
+  width: 150px;
   height: 100%;
 }
 
