--- a/style.css
+++ b/style.css
@@ -193,25 +193,25 @@ nav {
   width: 65%;
 }
 
-.container {
+.logementMarseille {
   background-color: #F2F2F2;
   padding: 5px;
   border-radius: 20px;
   height: 100%;
 }
 
-.hebergement .liste {
+.exempleLogement {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.hebergement .liste a {
+.exempleLogement a {
   width: 30%;
   margin: 10px;
 }
 
-.hebergement .liste a .article {
+.exempleLogement a .article {
   background-color: white;
   border-radius: 25px;
 }
@@ -227,16 +227,16 @@ nav {
   object-fit: cover;
 }
 
-.hebergement .liste a .article .photo {
+.exempleLogement a .article .photo {
   padding: 5px;
 }
 
-.hebergement .liste a .article .contenue {
+.exempleLogement a .article .contenue {
   padding-left: 10px;
   padding-top: 10pX;
 }
 
-.titre3 {
+.nomHotel {
   margin: 0;
   margin-left: 5px;
 }
@@ -246,7 +246,7 @@ nav {
   margin-left: 5px;
 }
 
-.hebergement .liste a .article .contenue .etoile {
+.exempleLogement a .article .contenue .etoile {
   padding-bottom: 15px;
   margin-left: 5px;
 }
@@ -261,11 +261,27 @@ nav {
   width: 34%;
 }
 
+.hebergement .container {
+  background-color: #F2F2F2;
+  padding: 5px;
+  border-radius: 20px;
+  height: 100%;
+}
+
 .hebergement .populaire .icone {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-left: 20px;
   margin-right: 20px;
+}
+
+.hebergement .liste {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .hebergement .populaire .liste {
@@ -276,17 +292,19 @@ nav {
 .hebergement .populaire .liste a {
   width: 100%;
   margin-bottom: 15px;
-}
-
-.hebergement .titre2 {
-    margin-left: 20px;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .hebergement .populaire .liste a .article {
   display: flex;
   flex-direction: row;
   height: 180px;
-  margin-right: 20px;
+}
+
+.hebergement .liste a .article {
+  background-color: white;
+  border-radius: 25px;
 }
 
 .hebergement .populaire .photo {
@@ -295,19 +313,24 @@ nav {
   object-fit: cover;
 }
 
+.hebergement .populaire a .article .photo {
+  padding: 5px;
+}
+
 .hebergement .populaire .liste a .article .carton {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   width: 60%;
 }
 
 .hebergement .populaire .liste a .article .contenue {
+  padding: 10px 15px 0px 5px;
   margin: 0;
-  height: 100px;
+  height: 120px;
 }
 
 .hebergement .populaire .article .etoile {
-  padding-left: 5px;
   margin: 0;
 }
 
