--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ nav {
   width: 100%;
 }
 
-.hebergement a{
+a{
   color: black;
   text-decoration: none;
 }
@@ -193,25 +193,25 @@ nav {
   width: 65%;
 }
 
-.logementMarseille {
+.container {
   background-color: #F2F2F2;
   padding: 5px;
   border-radius: 20px;
   height: 100%;
 }
 
-.exempleLogement {
+.hebergement .liste {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.exempleLogement a {
+.hebergement .liste a {
   width: 30%;
   margin: 10px;
 }
 
-.exempleLogement a .article {
+.hebergement .liste a .article {
   background-color: white;
   border-radius: 25px;
 }
@@ -227,16 +227,16 @@ nav {
   object-fit: cover;
 }
 
-.exempleLogement a .article .photo {
+.hebergement .liste a .article .photo {
   padding: 5px;
 }
 
-.exempleLogement a .article .contenue {
+.hebergement .liste a .article .contenue {
   padding-left: 10px;
   padding-top: 10pX;
 }
 
-.nomHotel {
+.titre3 {
   margin: 0;
   margin-left: 5px;
 }
@@ -246,7 +246,7 @@ nav {
   margin-left: 5px;
 }
 
-.exempleLogement a .article .contenue .etoile {
+.hebergement .liste a .article .contenue .etoile {
   padding-bottom: 15px;
   margin-left: 5px;
 }
@@ -261,27 +261,11 @@ nav {
   width: 34%;
 }
 
-.hebergement .container {
-  background-color: #F2F2F2;
-  padding: 5px;
-  border-radius: 20px;
-  height: 100%;
-}
-
 .hebergement .populaire .icone {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 20px;
   margin-right: 20px;
-}
-
-.hebergement .liste {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-left: 0;
-  margin-right: 0;
 }
 
 .hebergement .populaire .liste {
@@ -292,19 +276,17 @@ nav {
 .hebergement .populaire .liste a {
   width: 100%;
   margin-bottom: 15px;
-  margin-left: 0;
-  margin-right: 0;
+}
+
+.hebergement .titre2 {
+    margin-left: 20px;
 }
 
 .hebergement .populaire .liste a .article {
   display: flex;
   flex-direction: row;
   height: 180px;
-}
-
-.hebergement .liste a .article {
-  background-color: white;
-  border-radius: 25px;
+  margin-right: 20px;
 }
 
 .hebergement .populaire .photo {
@@ -313,24 +295,20 @@ nav {
   object-fit: cover;
 }
 
-.hebergement .populaire a .article .photo {
-  padding: 5px;
-}
-
 .hebergement .populaire .liste a .article .carton {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
   width: 60%;
 }
 
 .hebergement .populaire .liste a .article .contenue {
   padding: 10px 15px 0px 5px;
   margin: 0;
-  height: 120px;
+  height: 100px;
 }
 
 .hebergement .populaire .article .etoile {
+  padding-left: 5px;
   margin: 0;
 }
 
@@ -348,13 +326,8 @@ nav {
 .footer{
   display: flex;
   background-color: #F2F2F2;
-  padding-top: 30px;
 }
 
-.footer a{
-  color: black;
-  text-decoration: none;
-}
 
 .footer .colonne {
   width: 35%;
@@ -552,13 +525,15 @@ h1
 
 
 .footer{
-  display: flex;
   flex-direction: column;
-  background-color: #F2F2F2;
 }
 
+.footer .colonne {
+  width: 100%;
+}
 
 }
+
 
 
 
