--- a/style.css
+++ b/style.css
@@ -86,14 +86,14 @@ nav {
   margin-right: 30px;
 }
 
-.headerHostActButton {
+.headerHostActBouton {
   height: 20px;
   text-align: center;
   text-decoration: none;
   color: black;
 }
 
-.headerHostActButton:hover {
+.headerHostActBouton:hover {
   color: #0065FC;
 }
 
@@ -122,7 +122,7 @@ nav {
   padding: 10px;
 }
 
-.searchbutton {
+.searchBouton {
   background-color: #0065FC;
   color: white;
   font-weight: bold;
@@ -379,7 +379,7 @@ footer .colonne ul {
 
 /* Desktop */
 @media screen and (min-width: 992px) {
-  .searchbuttonIcon{
+  .searchBoutonIcon{
     display: none;
   }
 
@@ -482,11 +482,11 @@ footer .colonne ul {
     color: #0065FC;
 }
 
-.searchbuttonText{
+.searchBoutonText{
   display: none;
 }
 
-.searchbutton {
+.searchBouton {
   border-radius: 10px 10px 10px 10px;
 }
 
@@ -639,11 +639,11 @@ footer .colonne ul {
     color: #0065FC;
 }
 
-.searchbuttonText{
+.searchBoutonText{
   display: none;
 }
 
-.searchbutton {
+.searchBouton {
   border-radius: 10px 10px 10px 10px;
 }
 
